<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.linkedin.android.learning_android_accessibility.activities.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.ToolBar"/>

    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_l"
        android:textAppearance="@style/ErrorText"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_l"
        android:layout_marginLeft="@dimen/padding_l"
        android:layout_marginStart="@dimen/padding_l"
        android:layout_marginRight="@dimen/padding_l"
        android:layout_marginEnd="@dimen/padding_l"
        app:layout_constraintTop_toBottomOf="@id/login_error_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:errorTextAppearance="@style/ErrorText"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_address"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_l"
        android:layout_marginStart="@dimen/padding_l"
        android:layout_marginRight="@dimen/padding_l"
        android:layout_marginEnd="@dimen/padding_l"
        app:layout_constraintTop_toBottomOf="@id/login_email_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:errorTextAppearance="@style/ErrorText"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/login_remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_l"
        android:layout_marginStart="@dimen/padding_l"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/login_remember_email_address"
        app:layout_constraintLeft_toRightOf="@+id/login_remember_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintBottom_toTopOf="@+id/login_login_button"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_l"
        android:layout_marginStart="@dimen/padding_l"
        android:layout_marginRight="@dimen/padding_l"
        android:layout_marginEnd="@dimen/padding_l"
        app:layout_constraintTop_toBottomOf="@+id/login_remember_checkbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/login_login"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_forgot_password_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_l"
        android:layout_marginStart="@dimen/padding_l"
        android:layout_marginRight="@dimen/padding_l"
        android:layout_marginEnd="@dimen/padding_l"
        app:layout_constraintTop_toBottomOf="@+id/login_login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/login_forgot_password"/>

</android.support.constraint.ConstraintLayout>